hard-gists/95c61c9a1501ada2a6c5/run.log
=== Docker Run Log for 95c61c9a1501ada2a6c5 ===
Started at: Mi 29. Okt 18:28:30 CET 2025

[2025-10-29 18:28:30] START: Running container for 95c61c9a1501ada2a6c5
[2025-10-29 18:28:31] SUCCESS: Container 1d54134f1726404ac5f325cb0a7661316dcf7b563496421285ec94086c26c3a5 started for 95c61c9a1501ada2a6c5
=== Container logs for 95c61c9a1501ada2a6c5 ===
  File "/snippet.py", line 14
    print 'Usage:', sys.argv[0], \
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 95c61c9a1501ada2a6c5 ===
[2025-10-29 18:28:33] INFO: Container 1d54134f1726404ac5f325cb0a7661316dcf7b563496421285ec94086c26c3a5 has stopped
